Fri Apr 15 10:46:56 CDT 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/ciao/Container_Impl.cpp

	  Added a condition to check whether call standard configurator.

	* DAnCE/RepositoryManager/Repository_Manager.cpp

	  Modified to make it work by using ORBDebugLevel.

	* DAnCE/examples/Hello/Sender/Sender_exec.cpp

	  Fixed a warning message.

Thu Apr 14 10:54:56 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp

	Fixed a warning due to ambiguous conversion.
	
Thu Apr 143 10:21:58 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/examples/Hello/Sender/Sender.idl
	* DAnCE/examples/Hello/Sender/Sender_exec.cpp
	* DAnCE/examples/Hello/Sender/Sender_exec.h
	* DAnCE/examples/Hello/Sender/starter.cpp
	* DAnCE/examples/Hello/descriptors/Hello.cid
	* DAnCE/examples/Hello/descriptors/Receiver.cid
	* DAnCE/examples/Hello/descriptors/Sender.cid

	  Modified the Hello example to showcase the feature of setting
	  attributes through XML. "string" and "long" type attributes
	  are put into the test.

	* DAnCE/ciao/Container_Impl.cpp

	  Cleaned up a little bit.

Thu Apr 14 10:14:44 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Plan_Launcher/Plan_Launcher.mpc

	Added 'naming' to the list of base projects to fix a compile
	error
	
Thu Apr 14 02:02:13 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/ExecutionManager/Execution_Manager.cpp
	* DAnCE/ciao/Context_Impl_T.cpp
	* DAnCE/ciao/Dynamic_Component_Servant_Base.h
	* DAnCE/ciao/Dynamic_Component_Servant_T.cpp
	* DAnCE/ciao/Dynamic_Component_Servant_T.h
	* DAnCE/ciao/Home_Servant_Impl_T.cpp
	* DAnCE/ciao/Servant_Impl_T.cpp
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp
	* DAnCE/ciao/Upgradeable_Context_Impl_T.cpp

	Fixed a number of mistakes with emulated exceptions. 
	
Wed Apr 13 18:55:58 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/ciao/CCM_Component.idl
	* DAnCE/ciao/Container_Impl.cpp
	* DAnCE/ciao/Servant_Impl_Base.cpp